# Yandex-Mars

./: .gitignore  README.md  asdf.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 07c7d0ff96cf_добавили_признак_публикации.py
app/: .test_api.py.un~  bluprint.py  fill_db.py  fll_db.py  jobs_resource.py  main.py  news_resources.py  test_api.py  test_api.py~  users_resource.py
app/data/: __all_models.py  dapartments.py  departments.py  jobs.py  jobs_api.py  news.py  news_api.py  use_db.py  users.py  users_api.py
app/db/: blogs.db
app/forms/: department.py  job.py  user.py
app/static/css/: auto_answer.css
app/templates/: add_department.html  add_job.html  auto_answer.html  base.html  base2.html  base_save.html  departments.html  distribution.html  index.html  list_jobs.html  list_profs.html  login.html  login2.html  register.html  table.html  training.html  warning.html
db/: README.md
