[tool.poetry]
name = "yandex-mars"
version = "0.1.0"
description = ""
authors = ["Alchemmist <anton.ingrish@gmail.com>"]
readme = "README.md"
packages = [{include = "yandex_mars"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
sqlalchemy = "^2.0.6"
flask-login = "^0.6.2"
sqlalchemy-serializer = "^1.4.1"
flask-restful = "^0.3.9"
alembic = "^1.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
